--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "PDS Web App",
-  "name": "PDS Web App",
+  "short_name": "React Boilerplate",
+  "name": "React Boilerplate",
   "icons": [],
   "start_url": "./index.html",
   "display": "standalone",
