--- a/package.json
+++ b/package.json
@@ -94,6 +94,9 @@
     "webpack-env": "0.8.0"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.18",
+    "@fortawesome/free-solid-svg-icons": "^5.8.2",
+    "@fortawesome/react-fontawesome": "^0.1.4",
     "axios": "0.18.0",
     "lodash": "4.17.11",
     "moment": "2.24.0",
@@ -107,6 +110,7 @@
     "react-addons-css-transition-group": "15.6.2",
     "react-dom": "16.8.1",
     "react-dom-factories": "1.0.2",
+    "react-ga": "^2.6.0",
     "react-localize-redux": "2.17.5",
     "react-redux": "5.1.1",
     "react-redux-typescript": "3.0.0-rc.3",
@@ -122,10 +126,7 @@
     "shortid": "2.2.14",
     "ts-enum-util": "4.0.0-alpha.20181015",
     "ts-key-enum": "2.0.0",
-    "url": "0.11.0",
-    "@fortawesome/fontawesome-svg-core": "^1.2.18",
-    "@fortawesome/free-solid-svg-icons": "^5.8.2",
-    "@fortawesome/react-fontawesome": "^0.1.4"
+    "url": "0.11.0"
   },
   "scripts": {
     "npm-install": "npm install",
