--- a/package.json
+++ b/package.json
@@ -117,6 +117,7 @@
     "react-router": "4.3.1",
     "react-router-dom": "4.3.1",
     "react-select": "1.3.0",
+    "react-touch-events": "^2.1.0",
     "react-transition-group": "2.5.3",
     "redux": "3.7.2",
     "redux-devtools-extension": "2.13.7",
